--- a/contactform.css
+++ b/contactform.css
@@ -7,7 +7,7 @@
       .container {
         width: 100%;
         max-width: 845px;
-        margin: 0 auto;
+        margin: 10px;
       }
 
       .form-container {
