--- a/contactform.css
+++ b/contactform.css
@@ -1,4 +1,5 @@
-* {
+
+      * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -18,7 +19,7 @@
       .container {
         width: 100%;
         max-width: 845px;
-        margin: 15px;
+        margin: 0 auto;
       }
 
       .form-container {
@@ -46,6 +47,7 @@
         font-size: 15px;
         font-weight: 700;
         line-height: 24px;
+        margin-bottom: 18px;
       }
 
       .required {
@@ -64,7 +66,7 @@
         color: #ffffff;
         font-size: 14px;
         font-weight: 500;
-        padding: 12.67px 13px;
+        padding: 14.67px 16px;
         outline: none;
         transition: all 0.3s ease;
       }
