--- a/contactform.css
+++ b/contactform.css
@@ -9,7 +9,7 @@
       .container {
         width: 100%;
         max-width: 845px;
-        margin: 0 auto;
+        margin: 20px;
       }
 
       .form-container {
