--- a/about/global.css
+++ b/about/global.css
@@ -472,6 +472,7 @@ ul {
     line-height: 1.2;
     letter-spacing: -1.1px;
     margin-bottom: 15px;
+    font-color: black;
 }
 .faq-description {
     font-family: 'DM Sans', sans-serif;
