--- a/about/global.css
+++ b/about/global.css
@@ -469,6 +469,7 @@ ul {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 37px;
+    font-size: black;
     line-height: 1.2;
     letter-spacing: -1.1px;
     margin-bottom: 15px;
