--- a/about/global.css
+++ b/about/global.css
@@ -238,6 +238,7 @@ ul {
     letter-spacing: -1.1px;
     max-width: 1040px;
     margin-bottom: 15px;
+    color: #ffffff;
 }
 .story-description {
     font-family: 'DM Sans', sans-serif;
