--- a/about/global.css
+++ b/about/global.css
@@ -218,7 +218,7 @@ ul {
 /* CSS for section section:story */
 .story-section {
     background-color: var(--color-background-dark);
-    padding: 80px 0;
+    padding: 15px 30px ;
 }
 .story-header {
     margin-bottom: 50px;
