--- a/challenge/global.css
+++ b/challenge/global.css
@@ -309,7 +309,7 @@ ul {
 }
 
 .feature-card-intro .highlight {
-    background-color: #1fc329;
+    background-color: #10490A;
     color: var(--color-text-light);
     border-radius: 60px;
     padding: 2px 15px;
