--- a/challenge/global.css
+++ b/challenge/global.css
@@ -78,6 +78,10 @@ ul {
 
 .hero-section {
     background-color: var(--color-background);
+    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/futuristic-finance-digital-market-graph-user-interface-with-diagram-technology-hud-graphic-concept_1.jpg?v=1752718944');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     padding-top: 12px;
     padding-bottom: 80px;
     display: flex;
