--- a/challenge/global.css
+++ b/challenge/global.css
@@ -19,6 +19,7 @@
     margin: 0 auto;
     padding: 0 20px;   
     box-sizing: border-box;
+    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/Section_5.png?v=1752604369');
 }
 
 .btn {
