--- a/challenge/global.css
+++ b/challenge/global.css
@@ -19,7 +19,7 @@
     margin: 0 auto;
     padding: 0 20px;   
     box-sizing: border-box;
-    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/Section_5.png?v=1752604369');
+    
 }
 
 .btn {
@@ -98,7 +98,10 @@ ul {
     left: 50%;
     top: -40px;
     transform: translateX(-30%) rotate(35deg);
-    background: linear-gradient(180deg, #10490a 0%, #10490a 100%);
+    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/Section_5.png?v=1752604369');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     filter: blur(200px);
     opacity: 1;
     z-index: 0;
