--- a/challenge/global.css
+++ b/challenge/global.css
@@ -12,6 +12,12 @@
     --color-border: #b8b8b8;
     --color-border-dark: #3f3f3f;
 }
+#help{
+    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/Section_5.png?v=1752604369');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 .container {
     width: 100%;
