--- a/challenge/global.css
+++ b/challenge/global.css
@@ -93,19 +93,19 @@ ul {
 
 .hero-bg-blur {
     position: absolute;
-    width: 1024px;
-    height: 960px;
-    left: 50%;
-    top: -40px;
-    transform: translateX(-30%) rotate(35deg);
-    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/Section_5.png?v=1752604369');
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/futuristic-finance-digital-market-graph-user-interface-with-diagram-technology-hud-graphic-concept_1.jpg?v=1752718944');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    filter: blur(100px);
-    opacity: 0.3;
-    z-index: 1;
+    filter: blur(12px);
+    opacity: 0.7;
+    z-index: 0;
 }
+
 
 .hero-section .container {
     position: relative;
