--- a/challenge/global.css
+++ b/challenge/global.css
@@ -297,7 +297,7 @@ ul {
 .feature-card-intro h3 {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: 21px;
+    font-size: 23px;
     line-height: 1.5;
     color: #9d9daf;
 }
@@ -307,7 +307,7 @@ ul {
     color: var(--color-text-light);
     border-radius: 60px;
     padding: 2px 15px;
-    padding-top: 30px;
+    flex-direction: column;
 }
 
 .feature-card {
