--- a/about/global.css
+++ b/about/global.css
@@ -8,12 +8,6 @@
     --color-background-light: #f7f8f8;
     --color-background-white: #ffffff;
 }
-.help{
-    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/Section_5.png?v=1752604369');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
 .container {
     width: 100%;
     max-width: 1264px;
@@ -106,8 +100,10 @@ ul {
     left: 50%;
     width: 1024px;
     height: 960px;
-    background: linear-gradient(180deg, #10490a 0%, #10490a 100%);
-
+    background-image: url('https://cdn.shopify.com/s/files/1/0837/1935/6697/files/futuristic-finance-digital-market-graph-user-interface-with-diagram-technology-hud-graphic-concept_1.jpg?v=1752718944');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     filter: blur(200px);
     opacity: 2;
     transform: translateX(-50%) rotate(35deg);
