--- a/about/global.css
+++ b/about/global.css
@@ -106,7 +106,8 @@ ul {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    filter: blur(5px);
+    filter: blur(50px);
+    background: linear-gradient(159deg, #092b05 0%, rgba(38, 175, 24, 0) 129.81%);
     opacity: 2;
     z-index: 0;
 }
