--- a/about/global.css
+++ b/about/global.css
@@ -107,7 +107,7 @@ ul {
     background-position: center;
     background-repeat: no-repeat;
     filter: blur(3px);
-    background: linear-gradient(159deg, #10490A 0%, rgba(38, 175, 24, 0) 129.81%);
+    background: linear-gradient(159deg, #10490A 0%);
     opacity: 2;
     z-index: 0;
 }
