--- a/about/global.css
+++ b/about/global.css
@@ -107,7 +107,7 @@ ul {
     background-position: center;
     background-repeat: no-repeat;
     filter: blur(3px);
-    background: linear-gradient(135deg, #10490a 0%, #1f7d12 20%, #26AF18 50%, #2ECD59 80%, #a6f7c3 100%);  
+    background: linear-gradient(159deg, rgba(16, 73, 10, 0.9) 0%, rgba(38, 175, 24, 0.8) 30%, rgba(46, 205, 89, 0.7) 100%);
     opacity: 2;
     z-index: 0;
 }
