--- a/about/global.css
+++ b/about/global.css
@@ -107,7 +107,7 @@ ul {
     background-position: center;
     background-repeat: no-repeat;
     filter: blur(3px);
-    background: linear-gradient(159deg, rgba(16, 73, 10, 0.9) 0%, rgba(38, 175, 24, 0.8) 30%, rgba(46, 205, 89, 0.7) 100%);
+    background: linear-gradient(132deg, #26af18 20.11%, rgba(46, 205, 89, 0.24) 183.16%);
     opacity: 2;
     z-index: 0;
 }
