--- a/about/global.css
+++ b/about/global.css
@@ -93,6 +93,7 @@ ul {
     align-items: center;
     min-height: 588px;
     box-sizing: border-box;
+    background: linear-gradient(132deg, #10490A 20.11%, rgba(46, 205, 89, 0.24) 183.16%);
     z-index: 0.5;
 }
 
@@ -106,9 +107,8 @@ ul {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    filter: blur(1px);
-    background: linear-gradient(132deg, #26af18 20.11%, rgba(46, 205, 89, 0.24) 183.16%);
-    opacity: 0.2;
+    filter: blur(0.5px);
+    opacity: 3;
     z-index: 0.5;
 }
 
@@ -130,7 +130,7 @@ ul {
     align-items: center;
     gap: 8px;
     padding: 8px 11px;
-    background: linear-gradient(159deg, #10490a 0%, rgba(38, 175, 24, 0) 129.81%);
+    background: linear-gradient(159deg, #10490A 0%, rgba(38, 175, 24, 0) 129.81%);
     border-radius: 9px;
     margin-bottom: 24px;
 }
